frs-platform-core/main/default/objects/Integration_Log__c/Integration_Log__c.object-meta.xml
<CustomObject>
    <label>Integration Log</label>
    <pluralLabel>Integration Logs</pluralLabel>
    <nameField>
        <label>Integration Log Name</label>
        <type>AutoNumber</type>
        <displayFormat>ILOG-{00000000}</displayFormat>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>