frs-platform-core/main/default/objects/Integration_Log__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Callout</fullName>
                <default>true</default>
                <label>Callout</label>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Webhook</fullName>
            </value>
            <value>
                <fullName>Reconciliation</fullName>
            </value>
            <value>
                <fullName>System</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>