frs-platform-core/main/default/objects/Integration_Log__c/fields/Endpoint_Alias__c.field-meta.xml
<CustomField>
    <fullName>Endpoint_Alias__c</fullName>
    <label>Endpoint Alias</label>
    <type>Text</type>
    <length>255</length>
    <description>Named Credential alias/path. NEVER a raw URL or secret.</description>
</CustomField>