frs-platform-core/main/default/objects/Integration_Log__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <label>Message</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>Redaction-safe detail (status line / error summary). Never store raw payloads, tokens, or PII — Logger.redact() masks digits and secret-like tokens.</description>
</CustomField>