frs-platform-core/main/default/objects/Integration_Log__c/fields/Retry_Count__c.field-meta.xml
<CustomField>
    <fullName>Retry_Count__c</fullName>
    <label>Retry Count</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <description>Attempt number for this callout (0 = first try). Set by the retry framework.</description>
</CustomField>